[[release-notes-5.11.1]]
== 5.11.1

*Date of Release:* ❓

*Scope:* minor bug fixes and improvements since 5.11.0

For a complete list of all _closed_ issues and pull requests for this release, consult the
link:{junit5-repo}+/milestone/79?closed=1+[5.11.1] milestone page in the
JUnit repository on GitHub.


[[release-notes-5.11.1-junit-platform]]
=== JUnit Platform

[[release-notes-5.11.1-junit-platform-bug-fixes]]
==== Bug Fixes

* `NamespacedHierarchicalStore` no longer throws an exception after it has been closed if
  the store is queried via one of the `get(...)` or `getOrComputeIfAbsent(...)` methods;
  however, if a `getOrComputeIfAbsent(...)` invocation results in the computation of a new
  value, an exception will still be thrown.
* Fix potential locking issue with `ExclusiveResource` in the `HierarchicalTestExecutorService`.
  This could lead to deadlocks in certain scenarios.

[[release-notes-5.11.1-junit-platform-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-5.11.1-junit-platform-new-features-and-improvements]]
==== New Features and Improvements

* ❓


[[release-notes-5.11.1-junit-jupiter]]
=== JUnit Jupiter

[[release-notes-5.11.1-junit-jupiter-bug-fixes]]
==== Bug Fixes

* `TestWatcher` callback methods can once again access data in the
  `ExtensionContext.Store`.

[[release-notes-5.11.1-junit-jupiter-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-5.11.1-junit-jupiter-new-features-and-improvements]]
==== New Features and Improvements

* ❓


[[release-notes-5.11.1-junit-vintage]]
=== JUnit Vintage

[[release-notes-5.11.1-junit-vintage-bug-fixes]]
==== Bug Fixes

* ❓

[[release-notes-5.11.1-junit-vintage-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-5.11.1-junit-vintage-new-features-and-improvements]]
==== New Features and Improvements

* ❓